--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+@import 'https://fonts.googleapis.com/css?family=Cinzel+Decorative|Josefin+Sans:100,300,400,600|Lato:300,400|Quicksand';
+
 .navbar {
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 600;
@@ -83,7 +85,27 @@
     /*margin-left: 70px;*/
 }
 .proj-panel-heading {
+    padding-top: 20px;
     font-size: 15px;
+}
+.intern-panel-body {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.intern-panel-heading {
+    padding-top: 20px;
+}
+.intern-box {
+    margin-top: 20px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    min-height: 150px;
+    width: 80%;
+    background-color: rgba(255, 255, 255, 0.7);
+}
+.intern-img {
+    height: 150px;
+    width: 150px;
 }
 .intern-panel {
     width: 80%;
@@ -92,18 +114,6 @@
     font-weight: 400;
     opacity: 0.9;
 }
-.intern-panel-heading {
-    font-size: 15px;
-    /*opacity: 1;*/
-}
-.intern-panel-body {
-    text-align: left;
-}
-.intern-img {
-    width: 150px;
-    height: 150px;
-    opacity: 1.0!important;
-}
 .box {
     background-color: black;
     color: white;
@@ -111,13 +121,13 @@
     font-weight: 300;
     font-size: 110%;
     padding: 15px 15px 15px 15px;
-    opacity: 0.7;
+    background-color: rgba(0, 0, 0, 0.7);
     text-decoration: none !important;
 }
 .box:hover {
     color: white;
     cursor: default;
-    opacity: 1;
+    background-color: rgba(0, 0, 0, 1);
 }
 .standman {
     height: 120%;
@@ -129,7 +139,7 @@ h3 {
     color: red !important;
 }
 .not-work-box {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.7);
     padding: 5px 5px 10px 5px;
 }
 .not-work-text {
@@ -159,6 +169,15 @@ h3 {
     padding-bottom: 30px;
 }
 body {
-        overflow-x: hidden;
+    overflow-x: hidden;
 }
-/*Cinzel-400*/
+
+@media only screen and (min-width: 750px) {
+    .intern-panel-body {
+        padding-top: 10px;
+        padding-bottom: 0px;
+    }
+    .intern-panel-heading {
+        padding-top: 0px;
+    }
+}
