--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import 'https://fonts.googleapis.com/css?family=Cinzel+Decorative|Josefin+Sans:100,300,400,600|Lato:300,400|Quicksand';
+@import 'https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600|Lato:300,400';
 
 .navbar {
     font-family: 'Josefin Sans', sans-serif;
@@ -11,10 +11,7 @@
     background-repeat: no-repeat;
 }
 .page2 {
-    background-image: url("../img/back2.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    background-color: #F0F0F0;
 }
 .page3 {
     background-image: url("../img/back3.jpg");
@@ -27,7 +24,7 @@
     background-size: cover;
 }
 .page5 {
-    background-image: url("../img/back5.png");
+    background-image: url("../img/back5.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -79,13 +76,21 @@
     font-weight: 400;
     font-size: 13px;
 }
+.panel {
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+}
 .proj-panel {
     width: 70%;
     padding-bottom: 40px;
     /*margin-left: 70px;*/
 }
 .proj-panel-heading {
-    padding-top: 20px;
+    background-color: #f5f5f5;
+    vertical-align: center;
+    padding-top: 7px;
+    padding-bottom: 7px;
     font-size: 15px;
 }
 .intern-panel-body {
@@ -98,18 +103,25 @@
     padding-top: 20px;
 }
 .intern-box {
+    box-shadow: 2px 2px 10px 0px rgba(111, 102, 102, 0.4);
+    -moz-box-shadow: 2px 2px 10px 0px rgba(111, 102, 102, 0.4);
+    -webkit-box-shadow: 2px 2px 10px 0px rgba(111, 102, 102, 0.4);
     /*text-overflow: all;*/
     margin-top: 20px;
     font-family: 'Lato', sans-serif;
     font-weight: 400;
     /*min-height: 150px;*/
-    width: 90%;
+    width: 95%;
     background-color: rgba(255, 255, 255, 0.7);
 }
-.intern-box-heading, .intern-post, .intern-time {
+.intern-post, .intern-time {
     background-color: rgba(0, 0, 0, 0.2);
 }
+.intern-box a {
+    color: #736AFF;
+}
 .intern-img {
+    margin-top: 10px;
     height: 150px;
     width: 150px;
 }
@@ -135,16 +147,15 @@
     cursor: default;
     background-color: rgba(0, 0, 0, 1);
 }
-.standman {
-    height: 120%;
-    width: 120%;
-}
 h3 {
-    font-family: 'Quicksand', sans-serif !important;
-    font-weight: 400 !important;
+    font-family: 'Lato', sans-serif !important;
+    font-weight: 300 !important;
     color: red !important;
 }
 .not-work-box {
+    box-shadow: 2px 2px 10px 0px rgba(111, 102, 102, 0.4);
+    -moz-box-shadow: 2px 2px 10px 0px rgba(111, 102, 102, 0.4);
+    -webkit-box-shadow: 2px 2px 10px 0px rgba(111, 102, 102, 0.4);
     background-color: rgba(255, 255, 255, 0.7);
     padding: 5px 5px 10px 5px;
 }
@@ -155,20 +166,14 @@ h3 {
     padding-left: 10px;
 }
 .foot-text {
+    background-color: rgba(0, 0, 0, 0.4);
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-size: 18px;
     position: relative;
     bottom: 10px;
-    color: black;
+    color: white;
     padding: 10px 10px 10px 10px;
-}
-.foot-box {
-    background-color: black;
-    opacity: 0.2;
-    position: relative;
-    bottom: -30px;
-    width: 70%;
 }
 .box-padd {
     padding-top: 30px;
@@ -190,17 +195,13 @@ body {
         padding-bottom: 5px;
     }
     .intern-post {
-        border-top-style: solid;
         border-right-style: solid;
-        border-top-width: 2px;
         border-right-width: 1px;
         border-color: white;
         margin-bottom: 5px;
     }
     .intern-time {
-        border-top-style: solid;
         border-left-style: solid;
-        border-top-width: 2px;
         border-left-width: 1px;
         border-color: white;
         margin-bottom: 5px;
