--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,7 @@
     background-image: url("../img/back4.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    overflow: auto;
 }
 .page5 {
     background-image: url("../img/back5.jpg");
@@ -133,11 +134,21 @@
     font-weight: 400;
     opacity: 0.9;
 }
-.box {
-    background-color: black;
+.tech-box {
+    background-color: rgba(0, 0, 0, 0.7);
     color: white;
+    font-size: 1.2em;
+    text-align: center;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    margin-bottom: 40px;
+    width: 90vw;
+}
+/*.box {
+    background-color: black;
+    color: white;
     font-size: 110%;
     padding: 15px 15px 15px 15px;
     background-color: rgba(0, 0, 0, 0.7);
@@ -147,7 +158,7 @@
     color: white;
     cursor: default;
     background-color: rgba(0, 0, 0, 1);
-}
+}*/
 h3 {
     font-family: 'Lato', sans-serif !important;
     font-weight: 300 !important;
