--- a/css/index.css
+++ b/css/index.css
@@ -192,7 +192,7 @@ h3 {
     padding-bottom: 30px;
 }
 body {
-    /*overflow-x: hidden;*/
+    overflow-x: hidden;
 }
 
 @media only screen and (min-width: 750px) {
