--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,10 @@
 @import 'https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600|Lato:300,400';
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300');
 
-body {
+/*body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
+}*/
 .navbar {
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 600;
@@ -57,6 +57,8 @@ body {
     font-size: 30px;
 }
 .intro-text {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     text-align: center;
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 400;
