Taking back to stable state Revert "Major remake; unstable"
This reverts commit 6fb356f832eba0b418cfd4e91f443a5aa8a0a556.

--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,5 @@
 @import 'https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600|Lato:300,400';
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300');
 
-body {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
 .navbar {
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 600;
@@ -47,7 +42,6 @@ body {
 }
 .name {
     text-align: center;
-    margin-top: 70px;
     color: white;
 }
 .raw-text {
@@ -59,25 +53,12 @@ body {
 .intro-text {
     text-align: center;
     font-family: 'Josefin Sans', sans-serif;
-    font-weight: 400;
+    font-weight: 300;
     color: #ffffff;
     font-size: 20px;
 }
-.dps {
-    padding-top: 15vh;
-}
-/*.dp1, .dp4 {
-    width: 54%;
-}
-.dp2, .dp3 {
-    width: 100%;
-}*/
-.dp1, .dp3, .dp2 {
-    display: none;
-}
-.dp4 {
-    width: 40%;
-    margin-left: 30%;
+.dp {
+    width: 170px;
 }
 .headings {
     font-family: 'Josefin Sans', sans-serif;
@@ -203,7 +184,7 @@ ul {
     padding-left: 15px;
 }
 
-/* Rules for devices larger than Mobiles and Tablets */
+/*Rules for devices larger than Mobiles and Tablets*/
 @media only screen and (min-width: 768px) {
     .intern-panel-body {
         padding-top: 10px;
@@ -266,44 +247,13 @@ ul {
     .tech-box3 {
         margin-top: 200px;
     }
-    .dp1, .dp4 {
-        margin: 0;
-        display: block;
-        width: 54%;
-    }
-    .dp2, .dp3 {
-        margin: 0;
-        display: block;
-        width: 100%;
-    }
 }
-
-/* Rules for very large Monitors, like the ones at CERN :P; */
-@media only screen and (min-width: 1441px) {
-    .name {
-        margin-top: 13vh;
-    }
-}
-
-/* Rules for very small devices */
 @media only screen and (max-width: 500px) {
-    .name {
-        margin-top: 20px;
-    }
     .first-name {
         font-size: 60px;
     }
     .last-name {
         font-size: 60px;
-    }
-    .intro-text {
-        font-size: 15px;
-    }
-    .intro-text span {
-        font-size: 17px !important;
-    }
-    .dps {
-        padding-top: 80px;
     }
     .headings {
         font-size: 60px;
