--- a/css/index.css
+++ b/css/index.css
@@ -250,7 +250,7 @@ ul {
         padding-bottom: 20px;
         padding: 40px 4px 20px 4px;
         margin-bottom: 40px;
-        width: 25vw;
+        width: 90%;
         margin-left: auto;
         margin-right: auto;
     }
