--- a/css/index.css
+++ b/css/index.css
@@ -59,6 +59,7 @@
 }
 .dp {
     width: 170px;
+    padding: 2px;
 }
 .headings {
     font-family: 'Josefin Sans', sans-serif;
@@ -197,7 +198,7 @@ ul {
 /*Rules for devices larger than Mobiles and Tablets*/
 @media only screen and (min-width: 768px) {
     .dp {
-        width: 195px;
+        width: 250px;
     }
     .intern-panel-body {
         padding-top: 10px;
