--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,13 @@
 	margin-left: auto;
 	margin-right: auto;
 }
+.tech-box1 a, .tech-box2 a, .tech-box3 a {
+	color: white;
+}
+.tech-box1 a:hover, .tech-box2 a:hover, .tech-box3 a:hover {
+	color: grey;
+	text-decoration: none;
+}
 h3 {
 	font-family: 'Lato', sans-serif !important;
 	font-weight: 300 !important;
