--- a/new/css/style.css
+++ b/new/css/style.css
@@ -3,6 +3,17 @@
 	font-weight: 600;
 	font-size: 15px;
 }
+
+.loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('../img/loader.gif') 50% 50% no-repeat rgb(249,249,249);
+    /*opacity: .8;*/
+}
 .page1 {
 	min-height: 100vh;
 	/*background-image: url("../img/back1.jpg");*/
