--- a/new/css/style.css
+++ b/new/css/style.css
@@ -171,7 +171,7 @@
 	font-weight: 300;
 	padding: 40px 11px 20px 11px;
 	margin-bottom: 40px;
-	width: 270px;
+	width: 85%;
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 20px;
